--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
             <artifactId>pulsar-client</artifactId>
             <version>2.4.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.6.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
